--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <title>Warehouse Item/Location Scanner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; background: #f5f5f5; }
     h2 { color: #333; margin-bottom: 5px; }
-    h3 { color: #07459C; margin-top: 0; margin-bottom: 15px; font-weight: bold; }
+    h3 { color: #07459C; margin: 0 0 15px 0; font-weight: bold; }
     .container { max-width: 600px; margin: auto; background: #fff; padding: 20px; border-radius: 4px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    .hidden { display: none; }
-    #scanInput { width: 100%; padding: 10px; font-size: 1.1em; margin-bottom: 10px; }
+    .hidden { display: none !important; }
+    #scanInput { width: 100%; padding: 10px; font-size: 1.1em; margin-bottom: 8px; }
     #dataTableContainer { max-height: 200px; overflow-y: auto; margin-bottom: 10px; border: 1px solid #ccc; }
     table { width: 100%; border-collapse: collapse; }
     th, td { padding: 8px; border-bottom: 1px solid #ddd; text-align: left; font-size: 1em; }
@@ -18,248 +19,175 @@
     .error { color: red; margin-bottom: 10px; }
     .info { margin-bottom: 10px; }
     button { cursor: pointer; }
-    /* Numeric pad styles */
-    #quantityContainer { text-align: center; margin-bottom: 10px; }
-    #quantityDisplay { font-size: 2em; margin-bottom: 10px; }
-    .keypad {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-      max-width: 300px;
-      margin: auto;
+
+    /* sticky table header */
+    #dataTable thead th {
+      position: sticky;
+      top: 0;
+      background: #fff;
+      z-index: 5;
     }
-    .keypad button {
-      font-size: 1.5em;
-      padding: 15px;
-      background: #e0e0e0;
-      border: none;
-      border-radius: 4px;
+
+    /* scan control buttons */
+    .scanControls {
       display: flex;
       justify-content: center;
-      align-items: center;
+      gap: 10px;
+      margin-top: 5px;
+      margin-bottom: 5px;
     }
-    #delKey { background-color: red; color: white; }
-    #enterKey { background-color: #8EFF26; color: white; }
-    .keypad svg { width: 1em; height: 1em; stroke: currentColor; stroke-width: 4; fill: none; }
-    .quantityInput { width: 60px; }
+    .controlBtn { width: 80px; height: 40px; border-radius:4px; border:none; padding:0;
+      display:flex; justify-content:center; align-items:center; background:#ccc; color:#fff; font-size:14px; }
+    .controlBtn:disabled { background:#cccccc; }
+
+    /* keypad */
+    #quantityContainer { text-align: center; margin-bottom: 10px; }
+    #quantityDisplay { font-size: 2em; margin-bottom: 10px; }
+    .keypad { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; max-width:300px; margin:auto; }
+    .keypad button { font-size:1.5em; padding:15px; background:#e0e0e0; border:none; border-radius:4px; display:flex;justify-content:center;align-items:center; }
+    #delKey { background:red;color:white; }
+    #enterKey { background:#8EFF26;color:white; }
+    .keypad svg{width:1em;height:1em;stroke:currentColor;stroke-width:4;fill:none;}
   </style>
 </head>
 <body>
-  <!-- User Info -->
-  <div class="container" id="userInfoContainer">
-    <h2>Warehouse Item / Location Scanner</h2>
-    <h3>Inventory Count</h3>
-    <form id="userForm">
-      <div>
-        <label for="userName">User Name:</label>
-        <input type="text" id="userName" required>
-      </div>
-      <div>
-        <label for="warehouseZone">Warehouse Zone:</label>
-        <input type="text" id="warehouseZone" required>
-      </div>
-      <button type="submit">Start</button>
-    </form>
+
+<div class="container" id="userInfoContainer">
+  <h2>Warehouse Item / Location Scanner</h2>
+  <h3>Inventory Count</h3>
+  <form id="userForm">
+    <div><label for="userName">User Name:</label> <input type="text" id="userName" required></div>
+    <div><label for="warehouseZone">Warehouse Zone:</label> <input type="text" id="warehouseZone" required></div>
+    <button type="submit">Start</button>
+  </form>
+</div>
+
+<div class="container hidden" id="mainApp">
+  <div class="info"><strong>User:</strong> <span id="displayName"></span> | <strong>Warehouse Zone:</strong> <span id="displayZone"></span></div>
+  <div id="errorMessage" class="error"></div>
+
+  <input type="text" id="scanInput" placeholder="Scan/Type Item" readonly>
+
+  <div class="scanControls" id="scanControlButtons">
+    <button id="showKeyboardBtn" class="controlBtn" style="background:#1BCDFA"><i class="fa-solid fa-keyboard"></i></button>
+    <button id="triggerEnterBtn" class="controlBtn" disabled>
+      <svg viewBox="0 0 24 24" style="width:20px;height:20px"><polyline points="20 6 9 17 4 12" fill="none" stroke="white" stroke-width="4"/></svg>
+    </button>
   </div>
 
-  <!-- Main App -->
-  <div class="container hidden" id="mainApp">
-    <div class="info">
-      <strong>User:</strong> <span id="displayName"></span> |
-      <strong>Warehouse Zone:</strong> <span id="displayZone"></span>
+  <div id="quantityContainer" class="hidden">
+    <div id="quantityDisplay">0</div>
+    <div class="keypad">
+      <button class="numKey">1</button><button class="numKey">2</button><button class="numKey">3</button>
+      <button class="numKey">4</button><button class="numKey">5</button><button class="numKey">6</button>
+      <button class="numKey">7</button><button class="numKey">8</button><button class="numKey">9</button>
+      <button id="delKey"><svg viewBox="0 0 24 24"><polyline points="15 6 9 12 15 18"/></svg></button>
+      <button class="numKey">0</button>
+      <button id="enterKey"><svg viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"/></svg></button>
     </div>
-    <div id="errorMessage" class="error"></div>
-
-    <!-- Scan Input -->
-    <input type="text" id="scanInput" placeholder="Scan/Type Item" autofocus>
-
-    <!-- Quantity Pad -->
-    <div id="quantityContainer" class="hidden">
-      <div id="quantityDisplay">0</div>
-      <div class="keypad">
-        <button class="numKey">1</button>
-        <button class="numKey">2</button>
-        <button class="numKey">3</button>
-        <button class="numKey">4</button>
-        <button class="numKey">5</button>
-        <button class="numKey">6</button>
-        <button class="numKey">7</button>
-        <button class="numKey">8</button>
-        <button class="numKey">9</button>
-        <button id="delKey">
-          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polyline points="15 6 9 12 15 18"/></svg>
-        </button>
-        <button class="numKey">0</button>
-        <button id="enterKey">
-          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><polyline points="20 6 9 17 4 12"/></svg>
-        </button>
-      </div>
-    </div>
-
-    <!-- Data Table -->
-    <div id="dataTableContainer">
-      <table id="dataTable">
-        <thead>
-          <tr>
-            <th>Item</th>
-            <th>Location</th>
-            <th>Quantity</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-
-    <button id="exportCSV">Export to CSV</button>
   </div>
 
-  <script>
-    let currentState = 'item';
-    let currentItem = '';
-    let tempLocation = '';
-    let rawQuantity = '';
-    let scannedData = JSON.parse(localStorage.getItem('scannedData') || '[]');
+  <div id="dataTableContainer">
+    <table id="dataTable"><thead><tr>
+      <th>Item</th><th>Location</th><th>Quantity</th><th>Action</th>
+    </tr></thead><tbody></tbody></table>
+  </div>
+  <button id="exportCSV">Export to CSV</button>
+</div>
 
-    const userInfoContainer = document.getElementById('userInfoContainer');
-    const mainApp = document.getElementById('mainApp');
-    const userForm = document.getElementById('userForm');
-    const displayName = document.getElementById('displayName');
-    const displayZone = document.getElementById('displayZone');
-    const scanInput = document.getElementById('scanInput');
-    const errorMessage = document.getElementById('errorMessage');
-    const dataTableBody = document.querySelector('#dataTable tbody');
-    const exportCSVBtn = document.getElementById('exportCSV');
-    const quantityContainer = document.getElementById('quantityContainer');
-    const quantityDisplay = document.getElementById('quantityDisplay');
-    const numKeys = document.querySelectorAll('.numKey');
-    const delKey = document.getElementById('delKey');
-    const enterKey = document.getElementById('enterKey');
+<script>
+let currentState='item',currentItem='',tempLocation='',rawQuantity='',
+scannedData=JSON.parse(localStorage.getItem('scannedData')||'[]');
 
-    function formatNumber(str) {
-      if (!str) return '0';
-      return str.replace(/\B(?=(\d{3})+(?!\d))/g, ',');
-    }
+const scanInput=document.getElementById('scanInput'),
+scanControlButtons=document.getElementById('scanControlButtons'),
+showKeyboardBtn=document.getElementById('showKeyboardBtn'),
+triggerEnterBtn=document.getElementById('triggerEnterBtn'),
+quantityContainer=document.getElementById('quantityContainer'),
+quantityDisplay=document.getElementById('quantityDisplay'),
+numKeys=document.querySelectorAll('.numKey'),delKey=document.getElementById('delKey'),
+enterKey=document.getElementById('enterKey'),
+errorMessage=document.getElementById('errorMessage'),
+dataTableBody=document.querySelector('#dataTable tbody'),
+displayName=document.getElementById('displayName'),
+displayZone=document.getElementById('displayZone');
 
-    function updateDisplay() {
-      quantityDisplay.textContent = formatNumber(rawQuantity);
-    }
+function formatNumber(v){return v?v.replace(/\B(?=(\d{3})+(?!\d))/g,','):0;}
+function updateDisplay(){quantityDisplay.textContent=formatNumber(rawQuantity);}
+function saveData(){localStorage.setItem('scannedData',JSON.stringify(scannedData));}
+function loadTable(){
+ dataTableBody.innerHTML='';
+ scannedData.forEach((e,i)=>{
+   dataTableBody.innerHTML+=`<tr><td>${e.item}</td><td>${e.location}</td><td>${formatNumber(e.quantity.toString())}</td>
+   <td><button data-index="${i}" class="deleteRow">Delete</button></td></tr>`;
+ });
+}
+function showError(f){errorMessage.textContent=`campo incorrecto, verifica (${f})`;setTimeout(()=>errorMessage.textContent='',3000);}
+function clearInput(){scanInput.value='';scanInput.focus();}
 
-    function loadTable() {
-      dataTableBody.innerHTML = '';
-      scannedData.forEach((e,i) => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${e.item}</td>
-          <td>${e.location}</td>
-          <td>${formatNumber(e.quantity.toString())}</td>
-          <td><button data-index=\"${i}\" class=\"deleteRow\">Delete</button></td>
-        `;
-        dataTableBody.appendChild(row);
-      });
-      document.getElementById('dataTableContainer').scrollTop = document.getElementById('dataTableContainer').scrollHeight;
-    }
+showKeyboardBtn.addEventListener('click',()=>{scanInput.removeAttribute('readonly');scanInput.focus();});
+scanInput.addEventListener('blur',()=>{scanInput.setAttribute('readonly',true);});
+triggerEnterBtn.addEventListener('click',()=>{if(!triggerEnterBtn.disabled) scanInput.dispatchEvent(new KeyboardEvent('keydown',{key:'Enter'}));});
+scanInput.addEventListener('input',()=>{
+  if(scanInput.value.trim()!==''){triggerEnterBtn.disabled=false;triggerEnterBtn.style.background='#8EFF26';}
+  else {triggerEnterBtn.disabled=true;triggerEnterBtn.style.background='#cccccc';}
+});
 
-    function saveData() {
-      localStorage.setItem('scannedData', JSON.stringify(scannedData));
-    }
+scanInput.addEventListener('keydown',e=>{
+ if(e.key==='Enter'){e.preventDefault();let v=scanInput.value.trim();
+   if(currentState==='item'){
+     if(!v||/^\d+$/.test(v)){showError('Item');return clearInput();}
+     currentItem=v; currentState='location'; scanInput.placeholder='Scan/Type Location (Only numeric)'; return clearInput();
+   }
+   if(currentState==='location'){
+     if(!currentItem){showError('Item');return clearInput();}
+     if(!/^\d+$/.test(v)){showError('Location');return clearInput();}
+     tempLocation=v; currentState='quantity';
+     scanInput.classList.add('hidden');
+     scanControlButtons.classList.add('hidden');
+     rawQuantity='';updateDisplay();
+     quantityContainer.classList.remove('hidden');
+   }
+ }});
 
-    function showError(field) {
-      errorMessage.textContent = `campo incorrecto, verifica que estes escaneando (${field})`;
-      setTimeout(() => errorMessage.textContent = '', 3000);
-    }
+numKeys.forEach(btn=>btn.addEventListener('click',()=>{rawQuantity+=btn.textContent;updateDisplay();}));
+delKey.addEventListener('click',()=>{rawQuantity=rawQuantity.slice(0,-1);updateDisplay();});
+enterKey.addEventListener('click',()=>{
+ if(!rawQuantity){showError('Quantity');return;}
+ scannedData.push({item:currentItem,location:tempLocation,quantity:parseInt(rawQuantity,10)});
+ saveData();loadTable();
+ currentItem='';tempLocation='';rawQuantity='';currentState='item';
+ quantityContainer.classList.add('hidden');
+ scanInput.classList.remove('hidden');
+ scanControlButtons.classList.remove('hidden');
+ scanInput.placeholder='Scan/Type Item';clearInput();
+});
 
-    function clearInput() {
-      scanInput.value = '';
-      scanInput.focus();
-    }
+// delete rows
+dataTableBody.addEventListener('click',e=>{
+ if(e.target.matches('button.deleteRow')){
+   scannedData.splice(+e.target.dataset.index,1);saveData();loadTable();
+ }});
 
-    scanInput.addEventListener('keydown', e => {
-      if (e.key === 'Enter') {
-        e.preventDefault();
-        const val = scanInput.value.trim();
-        if (currentState === 'item') {
-          if (!val || /^\d+$/.test(val)) { showError('Item'); return clearInput(); }
-          currentItem = val;
-          currentState = 'location';
-          scanInput.placeholder = 'Scan/Type Location (Only numeric)';
-          return clearInput();
-        }
-        if (currentState === 'location') {
-          if (!currentItem) { showError('Item'); return clearInput(); }
-          if (!/^\d+$/.test(val)) { showError('Location'); return clearInput(); }
-          tempLocation = val;
-          currentState = 'quantity';
-          scanInput.classList.add('hidden');
-          rawQuantity = '';
-          updateDisplay();
-          quantityContainer.classList.remove('hidden');
-        }
-      }
-    });
+document.getElementById('exportCSV').addEventListener('click',()=>{
+ let csv='data:text/csv;charset=utf-8,User:,'+displayName.textContent+
+ '\nWarehouse Zone:,'+displayZone.textContent+'\n\nItem,Location,Quantity\n';
+ scannedData.forEach(r=>{csv+=`${r.item},${r.location},${r.quantity}\n`;});
+ const uri=encodeURI(csv),a=document.createElement('a');
+ a.href=uri;a.download=`scanned_data_${Date.now()}.csv`;document.body.appendChild(a);
+ a.click();document.body.removeChild(a);
+});
 
-    numKeys.forEach(btn => btn.addEventListener('click', () => {
-      rawQuantity += btn.textContent;
-      updateDisplay();
-    }));
-
-    delKey.addEventListener('click', () => {
-      rawQuantity = rawQuantity.slice(0, -1);
-      updateDisplay();
-    });
-
-    enterKey.addEventListener('click', () => {
-      if (!rawQuantity) { showError('Quantity'); return; }
-      const qty = parseInt(rawQuantity, 10);
-      scannedData.push({ item: currentItem, location: tempLocation, quantity: qty });
-      saveData();
-      loadTable();
-      currentItem = '';
-      tempLocation = '';
-      rawQuantity = '';
-      currentState = 'item';
-      quantityContainer.classList.add('hidden');
-      scanInput.classList.remove('hidden');
-      scanInput.placeholder = 'Scan/Type Item';
-      clearInput();
-    });
-
-    dataTableBody.addEventListener('click', e => {
-      if (e.target.matches('button.deleteRow')) {
-        scannedData.splice(+e.target.dataset.index, 1);
-        saveData();
-        loadTable();
-      }
-    });
-
-    exportCSVBtn.addEventListener('click', () => {
-      let csv = 'data:text/csv;charset=utf-8,';
-      csv += `User:,${userName}\nWarehouse Zone:,${warehouseZone}\n\n`;
-      csv += 'Item,Location,Quantity\n';
-      scannedData.forEach(r => {
-        csv += `${r.item},${r.location},${r.quantity}\n`;
-      });
-      const uri = encodeURI(csv);
-      const a = document.createElement('a');
-      a.href = uri;
-      a.download = `scanned_data_${Date.now()}.csv`;
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
-    });
-
-    userForm.addEventListener('submit', e => {
-      e.preventDefault();
-      userName      = document.getElementById('userName').value.trim();
-      warehouseZone = document.getElementById('warehouseZone').value.trim();
-      if (!userName || !warehouseZone) return alert('Please fill both fields.');
-      displayName.textContent = userName;
-      displayZone.textContent = warehouseZone;
-      userInfoContainer.classList.add('hidden');
-      mainApp.classList.remove('hidden');
-      loadTable();
-      clearInput();
-    });
-  </script>
+document.getElementById('userForm').addEventListener('submit',e=>{
+ e.preventDefault();
+ const userName=document.getElementById('userName').value.trim(),
+       warehouseZone=document.getElementById('warehouseZone').value.trim();
+ if(!userName||!warehouseZone)return alert('Please fill both fields.');
+ displayName.textContent=userName;displayZone.textContent=warehouseZone;
+ document.getElementById('userInfoContainer').classList.add('hidden');
+ document.getElementById('mainApp').classList.remove('hidden');
+ loadTable();clearInput();
+});
+</script>
 </body>
 </html>
