--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Warehouse Item/Location Scanner</title>
+  <title>Inventory Count</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
@@ -191,3 +191,4 @@ document.getElementById('userForm').addEventListener('submit',e=>{
 </script>
 </body>
 </html>
+
